test: add openapi schema checks
